<resources>
    <string name="app_name">Haltura</string>
    <string name="my_web_client_id">919904320191-k7vd5j0ub5p4rffc81igtq9ic5gbiel4.apps.googleusercontent.com</string>
    <string name="Maps_API">AIzaSyCABg3ZZUCwOMEwMqbOxCLVZn2uPPHrUJY</string>
    <string name="title_activity_result_launcher">ActivityResultLauncher</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="web_client_id">919904320191-k7vd5j0ub5p4rffc81igtq9ic5gbiel4.apps.googleusercontent.com</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_work">Work</string>
    <string name="title_chats">Chats</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_report">Report</string>
    <string name="Profiles">Profiles</string>
    <string name="Reports">Reports</string>
    <string name="Works">Works</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_work_history">WorkHistoryActivity</string>
    <string name="title_activity_chat">Current Chat :</string>
    <string name="email">Email</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">Logo</string>
    <string name="googleLogIn">googleLogIn</string>
    <string name="SignUp">Sign Up</string>
    <string name="Password">Password</string>
    <string name="ForgotYourPassword">Forgot Your Password ?</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="example_3_input_dialog_title">Enter event title</string>
    <string name="example_3_empty_input_text">Text is empty</string>
    <string name="example_3_dialog_delete_confirmation">Delete this event?</string>
    <string name="delete">Delete</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="clear">Clear</string>
    <string name="week_mode">Week mode</string>
    <string name="calendar_title">Calendar</string>
    <string name="works_created_by_you">Works Created By You :</string>
    <string name="works_you_are_registered_for">Works you are registered for :</string>
    <string name="date">Date</string>
    <string name="profile_settings">Profile_settings</string>
    <string name="edit_button">edit_button</string>
    <string name="search_button">search_button</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_manage">ManageActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
</resources>