<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.haltura.Fragments.HomeFragments.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/navigation_work"
            android:name="com.example.haltura.Fragments.WorkFragments.WorkFragment"
            android:label=""
            tools:layout="@layout/fragment_work" />

    <fragment
            android:id="@+id/navigation_calendar"
            android:name="com.example.haltura.Fragments.CalendarFragments.CalendarFragment"
            android:label="@string/title_calendar"
            tools:layout="@layout/fragment_calendar" />

    <fragment
            android:id="@+id/navigation_chats"
            android:name="com.example.haltura.Fragments.ChatsFragments.ChatsFragment"
            android:label="@string/title_chats"
            tools:layout="@layout/fragment_calendar" />
</navigation>